<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SheDistrict</string>
    <string name="why_join_us">Why Join Us?</string>
    <string name="joinusMsg">Here you are, sitting at home, scrolling through social media and
        watching the people you follow or used to go to school with get ready for a night out on the
        town with their girl friends.\n\n You wake up from sleeping in on a Saturday afternoon,
        checking your social media, and the first thing you see are pictures of a fabulous brunch party or two
        friends at the museum, You can’t help but think to yourself, \"I wish that were me!\".
        \n\n Hey girl! That’s why SheDistrict is here.
        We are dedicated to making sure you find your perfect (friend) fit. Whether you’re single
        and looking for another girl to go meet people with, whether you\'ll need bridesmaids for your future wedding, or if you\’re new in town, we want to help you find your one
        true friend… or a few!</string>
    <string name="sign_up_with">Sign Up with:</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="please_fill_in_the_details_to_create_the_account">Please fill in the details to create the account:</string>
    <string name="user_name">User name</string>
    <string name="whats_fav_color">What\'s your favorite color?</string>
    <string name="new_password">New Password</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="confirm_password">Confirm new Password</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="type_your_answer">Type in your answer</string>
    <string name="mob">Phone Number (Optional)</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="create_your_profile">Create Your Profile!</string>
    <string name="choose_to_either">Choose to either:</string>
    <string name="do_both">Do both</string>
    <string name="write_bio">Write a bio</string>
    <string name="write_a_couple_of_things_that_about_you">Write a couple of things that about you...</string>
    <string name="verification_methods">Verification Methods:</string>
    <string name="why_am_i_seeing_this">Why am I seeing this?</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="verify_yourself">Verify Yourself</string>
    <string name="inst">Instructions</string>
    <string name="here_is_proper_example_how_the_pose_should_be_taken_for_the_verification_process">Here is proper example how the pose should be taken for the verification process.</string>
    <string name="topics">Topics:</string>
    <string name="state_your_name_age_and_location_n_choose_one_of_the_topics_below">-State your name, age and location  \n-Choose one of the topics below</string>
    <string name="writeVideo">-What is your favorite thing to do on the weekend? \n-Why did you join SheDistrict? \n-What are you hoping to gain from SheDistrict? \n-Who is your favorite singer? </string>
    <string name="verification_completed_successfully">Verification Completed \nSuccessfully!</string>
    <string name="thank_you">Thank You</string>
    <string name="toensure">To ensure that you are who you say you are \nand to keep our promise that this remains \n a woman\'s only app, we\'d really appreciate it \nif you upload a 10-30 second video to verify \n yourself.</string>
    <string name="you_don_t_want_to_upload_a_video">You don\'t want to upload a video?</string>
    <string name="that_s_perfectly_fine_we_will_always_respect_your_decision_a_picture_is_enough">That\'s perfectly fine! We will always respect \nyour decision. A picture is enough :)</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="this_will_not_be_posted_on_your_profile_and_this_will_not_be_posted_publicly_this_is_strictly_for_verification_purpose_only">This will not be posted on your profile and \nthis will not be posted publicly. This is strictly \nfor verification purpose only.</string>
    <string name="record_intro">Record Intro</string>
    <string name="record_intro_write_bio"><![CDATA[Record Intro & Write Bio]]></string>
    <string name="last_but_not_least_n_upload_some_photos">Show us your pretty face!</string>
    <string name="this_step_is_optional">This step is optional</string>
    <string name="please_fill_in_the_details_to_login">Please fill in the details to login:</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="choose_diffrent_type">Choose a different type of verification:</string>
    <string name="answer_Question">Answer the security question below</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">h29m1bC0y28m4BDqw3Qfwb2GO</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">DqvM505kI7jbj6poeu7qZqoMOJk0XG3OrMJJrrqvMBNShW8u5L</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="resetpass">Reset your password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="show_all">Categories</string>
    <string name="today_8_40_pm">Today, 8:40 PM</string>
    <string name="remove"><u>Remove</u></string>
    <string name="replace"><u>Replace</u></string>
    <string name="Dis">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
    </string>
    <string name="announce">I sent Aryana a message because I saw that she really enjoyed eating steak like I do. I sent her a mesage and we scheduled to meet for lunch at Ruth’s Steakhouse. It was such a great time. Aryana is the friend I’ve been loking for. Every girl needs a friend who loves to get fat off of food as much as she does.
Thank you, SheDistrict!</string>
    <string name="postDetail">Lisa Rose Recently graduated from Pace University with a Masters in Psychology with a concentration in Behavioral and Social Science. She is now a social entrepreneur passionate about creating a space for women to connect with other like-minded women.</string>
    <string name="you_want_to_delete_this_post">You want to delete this post,</string>
    <string name="result_based_on_your_preferences">Result based on your preferences</string>
    <string name="we_ve_been_very_good_internet_friends_alina_let_s_meet">We\'ve been very good internet friends Alina let\'s meet!</string>
    <string name="dummyAddress">9974 Lookout St. Brooklyn, NY 11237, Times Caffe</string>
    <string name="date">05.11.19</string>
    <string name="where">Where?</string>
    <string name="what">What?</string>
    <string name="when">When?</string>
    <string name="what_time">What time?</string>
    <string name="i_will_thing_about_it">I will think about it</string>
    <string name="you_want_to_be_their_friend_send_a_message">You want to be their friend, send a message!!</string>
    <string name="_8_40_am">8:40 AM</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="titleShort">Title ( keep it short )</string>
    <string name="preview">Preview</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="submitDialogText">Your announcement</string>
    <string name="submitDialogText1">has been posted!</string>
    <string name="reportMessage">Is this member bothering you \n or harrasing you?</string>
    <string name="why">Why do you want to \n report her?</string>
    <string name="whypost">Why do you want to \n report Post?</string>
    <string name="reportUpdateMessage">Thanks for letting us known!</string>
    <string name="reportUpdateMessage1">we are sorry that this person made you feel \n this way and we take your concerns very \n seriously.</string>
    <string name="reportUpdateMessage2">we will look into this. \n In this meantime, this person will disappear \n from your messages but you will still see them \n in other sections of SheDistrict, unless you \n block them!</string>
    <string name="blockUpdateMessage">Oh boy, we\'re sorry that \n it had to come to this.</string>
    <string name="blockUpdateMessage1">This person has been blocked from seeing your \n profile and you posts, and you won\'t see their \n profile or their posts either.</string>
    <string name="blockUpdateMessage2">If you have a change of heart, you can go to \n your settings and unblock them.</string>
    <string name="how">How this works</string>
    <string name="howData">Both of you are receiving this message at the same time.\n
If both of you say yes, you will bre taken to a page to schedule a girl date.\n
If both of you say no, your messages will dissapear, but you will still see this person in the browse section if you would like to connect with them again.\n
If you say yes and she says no, your messages will be paused and you won’t be able to contact each other until you are ready to meet.</string>
    <string name="why1">Why?</string>
    <string name="whyData">This is how we encourage meeting in person. \n We understand that people get busy, but it is \n important to be able to communicate offline as \n well. We think that two weeks is more than enough time to make yourselves comfortable \n with meeting offline.
 Disagree? Tell us why here</string>
    <string name="rule1">1. Before meeting, make sure you have a good sense of who the person you’re meeting is:\n
                            * Confirm that their pictures are real\n
                            *Exchange numbers and have conversation or video chat before meeting.</string>
    <string name="rule2">
        2. Do not give away any personal information ( i.e., your address). </string>
    <string name="rule3">
        3. Let close friends and family members know where you are going to meet this person.
            *Optional: Activate SheProtects to be able to access your friends, family, pr police department discreetly.</string>
    <string name="rule4">
        4. Do not meet in areas you’re unfamiliar with.</string>
    <string name="rule5">
        5. Call the venue you’re meeting at ahead of time to let them know you are visiting to meet with someone</string>
    <string name="rule6">
        6. Most importantly, have fun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helpText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.Awesome! You accepted an invitation from (username). Check under your “events” tab to keep track of your upcoming and pending events! Well that’s okay! No pressure. However, if you change your mind, you still can create your own event and invite (username). You’ve been invited! If you change your mind, your invitation is saved at pending invitations.</string>
    <string name="messageForCeo">
Nothing inspired the vision and development of \n SheDistrict more than the fact that I faced a huge \n problem that I know other women are also facing \n -the lack of friendships and connections being made \n with each other. It was February 2019 when \n I realized that I wanted to stop complaining about not being able to make friends in a big city \n and actually solve the problem by creating something \n that would eventually turn out to be bigger than \n myself.
</string>
    <string name="sheRuleTilte1">
        1. Be Unapologetic</string>
</resources>