<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/activityBg"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_close"
            android:layout_gravity="end"
            android:layout_marginRight="16dp" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/why_am_i_seeing_this"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/toensure"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/you_don_t_want_to_upload_a_video"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvMsg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
           android:textColor="@color/grey"
            android:gravity="center"
            android:text="@string/that_s_perfectly_fine_we_will_always_respect_your_decision_a_picture_is_enough"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDescl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/disclaimer"
            android:gravity="center"
            android:textColor="@color/skyblue"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvMsgDiscl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/skyblue"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/this_will_not_be_posted_on_your_profile_and_this_will_not_be_posted_publicly_this_is_strictly_for_verification_purpose_only"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>