<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ccDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="16dp"
        android:padding="6dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="6dp"
        android:text="@string/reportUpdateMessage"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/ivClose" />


    <TextView
        android:id="@+id/tvMsg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/roboto_light"
        android:padding="6dp"
        android:text="@string/reportUpdateMessage1"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvMsg" />


    <TextView
        android:id="@+id/tvMsg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_light"
        android:padding="6dp"
        android:text="@string/reportUpdateMessage2"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMsg2" />
</androidx.constraintlayout.widget.ConstraintLayout>