<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <com.appentus.shedistrict.Utils.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dummy_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Olivia Rose"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/ivProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivProfile"
            app:layout_constraintTop_toTopOf="@id/ivProfile" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/today_8_40_pm"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <ImageView
            android:id="@+id/ivMore"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:rotation="180"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/ivProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProfile" />

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvTime">

            <TextView
                android:id="@+id/tvMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/we_ve_been_very_good_internet_friends_alina_let_s_meet"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvTime" />

            <TextView
                android:id="@+id/tvLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableLeft="@drawable/ic_place"
                android:drawablePadding="6dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/dummyAddress"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvMsg" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableLeft="@drawable/ic_watch"
                android:drawablePadding="6dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvLoc" />


            <TextView
                android:id="@+id/tvTime2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableLeft="@drawable/ic_event"
                android:drawablePadding="6dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/today_8_40_pm"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tvName"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>