<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <include
        android:id="@+id/igTopBar"
        layout="@layout/toolbar_logo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/playfair_display_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/txtPurpal"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/please_fill_in_the_details_to_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ccEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="6dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMsg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_avatar" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/txtPurpal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ccTabview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:padding="6dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ccEmail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_padlock" />

                    <EditText
                        android:id="@+id/etpswd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/txtPurpal" />

                    <CheckBox
                        android:id="@+id/cbHidePassword"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:button="@null"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/checkbox_selector"

                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <CheckBox
                android:id="@+id/tvRemember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:button="@drawable/check_box"
                android:fontFamily="@font/roboto_regular"
                android:padding="6dp"
                android:text="Remember Me"
                android:textColor="#919191"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tvForgot"
                app:layout_constraintStart_toStartOf="@id/ccTabview"
                app:layout_constraintTop_toBottomOf="@id/ccTabview" />

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:padding="6dp"
                android:text="@string/forgot_password"
                android:textColor="#919191"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvRemember"
                app:layout_constraintEnd_toEndOf="@id/ccTabview"
                app:layout_constraintStart_toEndOf="@id/tvRemember"
                app:layout_constraintTop_toTopOf="@id/tvRemember" />


            <View
                android:id="@+id/vv1"
                android:layout_width="1px"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/ivSubmit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgot" />

            <ImageView
                android:id="@+id/ivSubmit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/forword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/ccTabview"
                app:layout_constraintTop_toBottomOf="@id/vv1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>